# hri_face_detect

./: CMakeLists.txt  package.xml  setup.py
nodes/hri_face_detect/: detect
nodes/retinaface_hri/: detect
src/hri_face_detect/: face_detection.py
src/retinaface_hri/: face_detection.py
